--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>ARSENAL Q62</title>
-		<link rel="stylesheet" href="../ARSENAL-Q62/CSS/ARSENAL-Q62.css">
+		<link rel="stylesheet" href="https://qoo622.github.io/Arsenal-Q62/CSS/ARSENAL-Q62.css">
 		<!-- Noto sans JPの読み込み -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,9 +15,6 @@
 		
 		<!-- fontawesomeアイコンの読み込み -->
 		<script src="https://kit.fontawesome.com/32bd0e5d50.js" crossorigin="anonymous"></script>
-		<!-- Anime.jsの読み込み -->
-		<script src="anime-master/lib/anime.min.js"></script>
-		
 	</head>
 
 	<body>
@@ -27,7 +24,7 @@
 		
 	<!-- - - - - - - - - - - ここからHeader周り - - - - - - - - - - - -->
 		<header>
-			<a href="../ARSENAL-Q62/ARSENAL-Q62.html"><img class="header-logo" src="../ARSENAL-Q62/img/logo/Q62-Arsenal_logo_Arsenal-Q62_logo_header_bk.svg"></a>
+			<a href="https://qoo622.github.io/Arsenal-Q62/index.html"><img class="header-logo" src="https://qoo622.github.io/Arsenal-Q62/img/logo/Q62-Arsenal_logo_Arsenal-Q62_logo_header_bk.svg"></a>
 		</header>
 		
 	<!-- - - - - - - - - ここからTop-image周り - - - - - - - - - -->		
