--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			<a class="menu-icon" href="https://x.com/qoo6221?s=21&t=OXhiHAZhT9JjPjXbD_4xHg"><i class="fa-brands fa-square-twitter"></i>Qoo622</a>
 			<a class="menu-icon" href="https://github.com/Qoo622/3D-print"><i class="fa-brands fa-square-github"></i>Github</a>
 		</div>
-		<img class="footer-logo" src="https://qoo622.github.io/Arsenal-Q62/img/logo/IMG_1031.PNG">
+		<img class="footer-logo" src="https://qoo622.github.io/Arsenal-Q62/img/logo/Q62-Arsenal_logo_Arsenal-Q62_logo_header_wh.svg">
 		<p class="footer-text">© 2024. Qoo622</p>
 	</div>
 
