--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -69,7 +69,7 @@
 			<div class="Three-Column_left">
 				<p class="Catch-copy_min">隠密性と駆動時間の向上</p>
 				<p class="Base-text">暗視モードで矯正点灯していたIR投光器を排除することにより、自己位置の曝露を防止するだけでなく駆動時間の延長に。</p>
-				<img src=".https://qoo622.github.io/Arsenal-Q62/img/YUME/PXL_20240131_050359789.jpg">
+				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/PXL_20240131_050359789.jpg">
 			</div>
 			<div class="Three-Column_center">
 				<p class="Catch-copy_min">マウント方法の自由化</p>
