--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
 		
 		<!-- fontawesomeアイコンの読み込み -->
 		<script src="https://kit.fontawesome.com/32bd0e5d50.js" crossorigin="anonymous"></script>
+		
+		<!-- ogp -->
+		<head prefix=”og: http://ogp.me/ns#”>
+			<meta property="og:url" content="https://qoo622.github.io/Arsenal-Q62/index.html" />
+			<meta property="og:type" content="website" />
+			<meta property="og:title" content="トップページ" />
+			<meta property="og:description" content="デザイナーのQoo622が趣味で作っているエアソフト・サバイバルゲーム向けプロダクトのポートフォリオサイトです" />
+			<meta property="og:site_name" content="ARSENAL Q62" />
+			<meta property="og:image" content="https://qoo622.github.io/Arsenal-Q62/img/logo/Q62-Arsenal_logo_Arsenal-Q62_logo_header_bk.svg" />
+			<meta name="twitter:card" content="summary" />
+			<meta name="twitter:site" content="@Qoo6221" />
 	</head>
 
 	<body>
