--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<meta property="og:title" content="トップページ" />
 			<meta property="og:description" content="デザイナーのQoo622が趣味で作っているエアソフト・サバイバルゲーム向けプロダクトのポートフォリオサイトです" />
 			<meta property="og:site_name" content="ARSENAL Q62" />
-			<meta property="og:image" content="https://qoo622.github.io/Arsenal-Q62/img/logo/Q62-Arsenal_logo_Arsenal-Q62_logo_header_bk.svg" />
+			<meta property="og:image" content="https://qoo622.github.io/Arsenal-Q62/img/logo/IMG_1036.png" />
 			<meta name="twitter:card" content="summary" />
 			<meta name="twitter:site" content="@Qoo6221" />
 	</head>
