--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<meta property="og:description" content="デザイナーのQoo622が趣味で作っているエアソフト・サバイバルゲーム向けプロダクトのポートフォリオサイトです" />
 			<meta property="og:site_name" content="ARSENAL Q62" />
 			<meta property="og:image" content="https://qoo622.github.io/Arsenal-Q62/img/logo/IMG_1036.png" />
-			<meta name="twitter:card" content="summary" />
+			<meta name="twitter:card" content="summary_large_image" />
 			<meta name="twitter:site" content="@Qoo6221" />
 	</head>
 
