--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<head prefix=”og: http://ogp.me/ns#”>
 			<meta property="og:url" content="https://qoo622.github.io/Arsenal-Q62/index.html" />
 			<meta property="og:type" content="website" />
-			<meta property="og:title" content="トップページ" />
+			<meta property="og:title" content="トップページ|ARSENAL Q62" />
 			<meta property="og:description" content="デザイナーのQoo622が趣味で作っているエアソフト・サバイバルゲーム向けプロダクトのポートフォリオサイトです" />
 			<meta property="og:site_name" content="ARSENAL Q62" />
 			<meta property="og:image" content="https://qoo622.github.io/Arsenal-Q62/img/logo/IMG_1036.png" />
