--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 		
 	<!-- - - - - - - - - ここからTop-image周り - - - - - - - - - -->		
 		<div>
-			<img class="Top-image" src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/PXL_20230208_130909860~2.jpg">
+			<img class="Top-image" src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0069.jpg">
 			<dvi class="Top-wrapper">
 				<div class="Top-description">
-					<img class="Top-logo" src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/logo_P320-EXF.svg">
-					<h1>ORIGINAL CARBINE KIT for P320</h1>
-					<a class="large-btn" href="https://qoo622.github.io/Arsenal-Q62/YUME_ARSENAL-Q62.html">VIEW MORE</a>
+					<img class="Top-logo" src="https://qoo622.github.io/Arsenal-Q62/img/YUME/logo_YUME_wh.svg">
+					<h1>Digital Night-vision DIY KIT</h1>
+					<a class="large-btn" href="../ARSENAL-Q62/YUME_ARSENAL-Q62.html">VIEW MORE</a>
 					<div class="scrolldown1"><span>Scroll</span></div>
 				</div>
 		</div>
