--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div class="Top-description">
 					<img class="Top-logo" src="https://qoo622.github.io/Arsenal-Q62/img/YUME/logo_YUME_wh.svg">
 					<h1>Digital Night-vision DIY KIT</h1>
-					<a class="large-btn" href="../ARSENAL-Q62/YUME_ARSENAL-Q62.html">VIEW MORE</a>
+					<a class="large-btn" href="https://qoo622.github.io/Arsenal-Q62/YUME_ARSENAL-Q62.html">VIEW MORE</a>
 					<div class="scrolldown1"><span>Scroll</span></div>
 				</div>
 		</div>
