--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 		
 		<!-- fontawesomeアイコンの読み込み -->
 		<script src="https://kit.fontawesome.com/32bd0e5d50.js" crossorigin="anonymous"></script>
+
+		<!-- jsの読み込み -->
+		<script src="ARSENAL-Q62.js"></script>
 		
 		<!-- ogp -->
 		<head prefix=”og: http://ogp.me/ns#”>
