--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<script src="https://kit.fontawesome.com/32bd0e5d50.js" crossorigin="anonymous"></script>
 
 		<!-- jsの読み込み -->
-		<script src="ARSENAL-Q62.js"></script>
+		<script src="https://qoo622.github.io/Arsenal-Q62/ARSENAL-Q62.js"></script>
 		
 		<!-- ogp -->
 		<head prefix=”og: http://ogp.me/ns#”>
@@ -137,7 +137,10 @@
 		</div>
 		</div>
 	</div>
-	
+	<!-- Twitter Shareボタン -->
+	<div class="Twitter-share">
+		<a class="tweet-button" href="#"><i class="fa-brands fa-square-twitter"></i>Share</a>
+	</div>
 	<!-- - - - - - - - - - - ここからFooter周り - - - - - - - - - - - -->
 	<div class="footer">
 		<div class="footer-link">
