--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>ARSENAL Q62</title>
-		<link rel="stylesheet" href="https://qoo622.github.io/Arsenal-Q62/CSS/ARSENAL-Q62.css">
+		<link rel="stylesheet" href="../ARSENAL-Q62/CSS/ARSENAL-Q62.css">
 		<!-- Noto sans JPの読み込み -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,10 +15,8 @@
 		
 		<!-- fontawesomeアイコンの読み込み -->
 		<script src="https://kit.fontawesome.com/32bd0e5d50.js" crossorigin="anonymous"></script>
-
 		<!-- jsの読み込み -->
-		<script src="https://qoo622.github.io/Arsenal-Q62/ARSENAL-Q62.js"></script>
-		
+		<script src="ARSENAL-Q62.js"></script>
 		<!-- ogp -->
 		<head prefix=”og: http://ogp.me/ns#”>
 			<meta property="og:url" content="https://qoo622.github.io/Arsenal-Q62/index.html" />
@@ -29,6 +27,7 @@
 			<meta property="og:image" content="https://qoo622.github.io/Arsenal-Q62/img/logo/IMG_1036.png" />
 			<meta name="twitter:card" content="summary_large_image" />
 			<meta name="twitter:site" content="@Qoo6221" />
+		
 	</head>
 
 	<body>
@@ -37,9 +36,9 @@
 		</div>
 		
 	<!-- - - - - - - - - - - ここからHeader周り - - - - - - - - - - - -->
-		<header>
-			<a href="https://qoo622.github.io/Arsenal-Q62/index.html"><img class="header-logo" src="https://qoo622.github.io/Arsenal-Q62/img/logo/Q62-Arsenal_logo_Arsenal-Q62_logo_header_wh.svg"></a>
-		</header>
+	<header>
+    	<a href="https://qoo622.github.io/Arsenal-Q62/index.html"><img id="headerLogo" class="header-logo" src="https://qoo622.github.io/Arsenal-Q62/img/logo/Q62-Arsenal_logo_Arsenal-Q62_logo_header_wh.svg"></a>
+	</header>
 		
 	<!-- - - - - - - - - ここからTop-image周り - - - - - - - - - -->		
 		<div>
@@ -48,7 +47,7 @@
 				<div class="Top-description">
 					<img class="Top-logo" src="https://qoo622.github.io/Arsenal-Q62/img/YUME/logo_YUME_wh.svg">
 					<h1>Digital Night-vision DIY KIT</h1>
-					<a class="large-btn" href="https://qoo622.github.io/Arsenal-Q62/YUME_ARSENAL-Q62.html">VIEW MORE</a>
+					<a class="large-btn" href="../ARSENAL-Q62/YUME_ARSENAL-Q62.html">VIEW MORE</a>
 					<div class="scrolldown1"><span>Scroll</span></div>
 				</div>
 		</div>
@@ -95,7 +94,7 @@
 				<div class="Product-description">
 					<p class="Product-title">YUME</p>
 					<p class="Product-text">中華製の謎の激安第1世代デジタルNV、通称『夢ビジョン』用強化モジュール式外装</p>
-					<a class="btn dark" href="https://qoo622.github.io/Arsenal-Q62/YUME_ARSENAL-Q62.html">VIEW MORE</a>
+					<a class="btn dark" href="#">VIEW MORE</a>
 				</div>
 				<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0012@2x.png">
 			</div>
@@ -141,6 +140,7 @@
 	<div class="Twitter-share">
 		<a class="tweet-button" href="#"><i class="fa-brands fa-square-twitter"></i>Share</a>
 	</div>
+	
 	<!-- - - - - - - - - - - ここからFooter周り - - - - - - - - - - - -->
 	<div class="footer">
 		<div class="footer-link">
