--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>ARSENAL Q62</title>
-		<link rel="stylesheet" href="../ARSENAL-Q62/CSS/ARSENAL-Q62.css">
+		<link rel="stylesheet" href="https://qoo622.github.io/Arsenal-Q62/CSS/ARSENAL-Q62.css">
 		<!-- Noto sans JPの読み込み -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
