--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<div class="Top-description">
 					<img class="Top-logo" src="https://qoo622.github.io/Arsenal-Q62/img/YUME/logo_YUME_wh.svg">
 					<h1>Digital Night-vision DIY KIT</h1>
-					<a class="large-btn" href="../ARSENAL-Q62/YUME_ARSENAL-Q62.html">VIEW MORE</a>
+					<a class="large-btn" href="https://qoo622.github.io/ARSENAL-Q62/YUME_ARSENAL-Q62.html">VIEW MORE</a>
 					<div class="scrolldown1"><span>Scroll</span></div>
 				</div>
 		</div>
@@ -94,7 +94,7 @@
 				<div class="Product-description">
 					<p class="Product-title">YUME</p>
 					<p class="Product-text">中華製の謎の激安第1世代デジタルNV、通称『夢ビジョン』用強化モジュール式外装</p>
-					<a class="btn dark" href="#">VIEW MORE</a>
+					<a class="btn dark" href="https://qoo622.github.io/ARSENAL-Q62/YUME_ARSENAL-Q62.html">VIEW MORE</a>
 				</div>
 				<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0012@2x.png">
 			</div>
