--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<div class="Date">2024.03.01.</div>
 				<div class="Base-text">ARSENAL Q62としての活動ページを公開しました。</div>
 			</div>
-			<a class="Update-content" href="#">
+			<a class="Update-content" href="https://qoo622.github.io/Arsenal-Q62/YUME_ARSENAL-Q62.html">
 				<div class="Date">2024.03.01.</div>
 				<div class="Base-text">夢ビジョン用カスタムモジュール『YUME』のページを公開しました。</div>
 			</a>
