--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>YUME | ARSENAL-Q62</title>
-		<link rel="stylesheet" href="../ARSENAL-Q62/CSS/ARSENAL-Q62.css">
-		<link rel="stylesheet" href="../ARSENAL-Q62/CSS/ARSENAL-Q62_single.css">
+		<link rel="stylesheet" href="https://qoo622.github.io/Arsenal-Q62/CSS/ARSENAL-Q62.css">
+		<link rel="stylesheet" href="https://qoo622.github.io/Arsenal-Q62/CSS/ARSENAL-Q62_single.css">
 		<!-- Noto sans JPの読み込み -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,7 +38,7 @@
 	
 	<body style="background-color: rgba(20,20,50,1); color: #FFFFFF;">
 		<div class="bg">
-			<img class="bg-logo" src="../ARSENAL-Q62/img/logo/Arsenal-Q62_logo_bg_dark.svg">
+			<img class="bg-logo" src="https://qoo622.github.io/Arsenal-Q62/img/logo/Arsenal-Q62_logo_bg_dark.svg">
 		</div>
 		
 	<!-- - - - - - - - - - - ここからHeader周り - - - - - - - - - - - -->
