--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -20,7 +20,7 @@
 		<script src="https://kit.fontawesome.com/32bd0e5d50.js" crossorigin="anonymous"></script>
 		<!-- JSの読み込み -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-		<script src="ARSENAL-Q62.js"></script>
+		<script src="https://qoo622.github.io/Arsenal-Q62/ARSENAL-Q62.js"></script>
 		<!-- Twitterのスクリプト -->
 		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		<!-- ogp -->
@@ -55,9 +55,6 @@
 				<div class="single_top-content_right">  <!-- 右要素 -->
 					<div class="svg-container">
 						<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/background-text_YUME.svg">
-					<div id="animated-svg-container">
-					<!-- ここにSVGが描画される -->
-					</div>
 					</div>
 				</div>
 			</div>
@@ -65,7 +62,7 @@
 			</div>
 			<div class="single_top-content_center"> <!-- 中央要素 -->
 				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0012@2x.png">
-				<a class="btn" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/YUME_v1"><i class="fa-brands fa-square-github"></i>DOWNLOAD</a>
+				<a class="btn" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/YUME_v1"><i class="fa-brands fa-square-github"></i>DOWNLOAD<i class="fa-solid fa-chevron-right"></i></a>
 			</div>
 		</div>
 	
@@ -102,28 +99,58 @@
 		</div>
 	</div>
 	<div class="Content-wrapper">
-		<div class="Column_wrapper">
-			<div class="Column-left">
-				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0073_min.jpg">
+		<div class="V-Card">
+			<div class="V-Card_Photo">
+				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0050~2.jpg" >
 			</div>
-			<div class="Column-right">
-				<p class="Content-block_title">データの活用について</p>
-				<p class="Content-block_text">プロダクトに関しては皆様のDIYを応援する意図で、基本的にすべてGithub上で無料で公開しています。公開しているデータは個人の範囲で自由にご利用いただけます。ご家庭の3Dプリンターや業者委託での出力などで活用ください。</p>
+			<div class="V-Card_Text">
+				<p class="Content-number">01</p>
+				<h3>マウント方法の自由化</h3>
+				<p class="Base-text">G43系のフリップガンマウントやDOVETAILインターフェースと接眼レンズオプションによるヘルメットマウントなど、柔軟な運用が可能。</p>
+			</div>
+		</div>
+		<div class="V-Card">
+			<div class="V-Card_Text">
+				<p class="Content-number">02</p>
+				<h3>マウント方法の自由化</h3>
+				<p class="Base-text">G43系のフリップガンマウントやDOVETAILインターフェースと接眼レンズオプションによるヘルメットマウントなど、柔軟な運用が可能。</p>
+			</div>
+			<div class="V-Card_Photo">
+				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0050~2.jpg" >
 			</div>
 		</div>
 	</div>
-	
 	<div class="Content-wrapper">
-		<div>
-			
-		</div>
+		
 	</div>
 	
 	<!-- - - - - - - - - - - ここからUpdate周り - - - - - - - - - -->
-
-	<!-- - - - - - - - - - - ここからGallery周り - - - - - - - - - -->
-		
-	<!-- - - - - - - - - - - ここからOthers周り - - - - - - - - - -->
+	<div class="Content-wrapper">
+		<h2 class="collection-title">UPDATE</h2>
+		<div class="Update-content_no-link">
+			<div class="Date">2024.03.01.</div>
+			<div class="Base-text">ARSENAL Q62としての活動ページを公開しました。</div>
+		</div>
+		<a class="Update-content" href="#">
+			<div class="Date">2024.03.01.</div>
+			<div class="Base-text">夢ビジョン用カスタムモジュール『YUME』のページを公開しました。</div>
+		</a>
+		<a class="Update-content" href="">
+			<div class="Date">2024.03.01.</div>
+			<div class="Base-text">SIG AIR/VFC P320向けカービンキット『P320 EXF』のページを公開しました。</div>
+		</a>
+	</div>
+	<!-- - - - - - - - - - - ここからConversion周り - - - - - - - - - -->
+	<div class="Content-wrapper">
+		<a class="Conversion" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/YUME_v1">
+			<div class="Text">
+				<p class="Catch-copy_min"><i class="fa-solid fa-cloud-arrow-down"></i>How to Download</p>
+				<p class="Base-text">作成用のデータはGithub内で公開しております。分解、組み立ての詳しいマニュアルもこちらのReadmeの内容を参照ください。</p>
+			</div>
+			<div class="Button"><i class="fa-brands fa-square-github"></i>Github<i class="fa-solid fa-chevron-right"></i></div>
+		</a>
+	</div>
+	<!-- - - - - - - - - - - ここからProduct周り - - - - - - - - - -->
 	<div class="Content-wrapper">
 		<h2 class="collection-title">PRODUCTS</h2>
 		<div class="Product-wrapper">
