--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<div class="Date">2024.03.01.</div>
 				<div class="Base-text">ARSENAL Q62としての活動ページを公開しました。</div>
 			</div>
-			<a class="Update-content" href="https://qoo622.github.io/Arsenal-Q62/YUME_ARSENAL-Q62.html">
+			<a class="Update-content" href="#">
 				<div class="Date">2024.03.01.</div>
 				<div class="Base-text">夢ビジョン用カスタムモジュール『YUME』のページを公開しました。</div>
 			</a>
@@ -102,9 +102,9 @@
 				<div class="Product-description">
 					<p class="Product-title">P320 Extra Frame</p>
 					<p class="Product-text">SIG/VFC P320用のオリジナルカービンコンバージョンキット</p>
-					<a class="btn-light" href="#">VIEW MORE</a>
+					<a class="btn-light" href="https://qoo622.github.io/Arsenal-Q62/P320-EXF_ARSENAL-Q62.html">VIEW MORE</a>
 				</div>
-				<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0012@2x.png">
+				<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/IMG_1043.PNG">
 			</div>
 		</div>
 	</div>
