--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -30,7 +30,7 @@
 			<meta property="og:title" content="YUME | ARSENAL Q62" />
 			<meta property="og:description" content="通称「夢ビジョン」用のカスタム外装プロダクト" />
 			<meta property="og:site_name" content="ARSENAL Q62" />
-			<meta property="og:image" content="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0084_min.JPG" />
+			<meta property="og:image" content="https://qoo622.github.io/Arsenal-Q62/img/YUME/OGP-image_YUME.png" />
 			<meta name="twitter:card" content="summary_large_image" />
 			<meta name="twitter:site" content="@Qoo6221" />
 
@@ -70,7 +70,7 @@
 	<div class="About">
 		<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0078.jpg">
 		<div class="About-text">
-			<p class="Catch-copy">“夢ビジョン”の限界を求めて</p>
+			<p class="Catch-copy">“夢ビジョン”の果てを求めて</p>
 			<p class="Base-text">通称“夢ビジョン”をご存知でしょうか。界隈で一時期話題になった中華製の謎の激安デジタルナイトビジョンで、IR補助灯や録画機能を備えていながら2000円程度と驚異的な低価格を特徴としている製品です。</p>
 			<p class="Base-text">ミリタリーライクとは言い難い外観・1/4インチネジのみという乏しい汎用性から、様々なマウント等が考案されましたが、主にアイリリーフなどの問題からいわゆるヘルメットに装着してのハンズフリー運用はほぼ不可能に近い状態でした。</p>
 			<p class="Base-text">本キットはこの夢ビジョンを分解・3Dプリンター製の外装で再構築することで、外観と汎用性の問題を改善しようというプロダクトです。「モジュラー」の名の通り4部位5パーツのモジュール構成でできており、各種のオプションパーツを組み替えることでマウント方式の変更や機能の追加などの更新に対応しやすくなっています。</p>
@@ -99,14 +99,15 @@
 		</div>
 	</div>
 	<div class="Content-wrapper">
+		<h2 class="collection-title">OPERATION</h2>
 		<div class="V-Card">
 			<div class="V-Card_Photo">
 				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0050~2.jpg" >
 			</div>
 			<div class="V-Card_Text">
 				<p class="Content-number">01</p>
-				<h3>マウント方法の自由化</h3>
-				<p class="Base-text">G43系のフリップガンマウントやDOVETAILインターフェースと接眼レンズオプションによるヘルメットマウントなど、柔軟な運用が可能。</p>
+				<h3>手軽なサバゲ向け双眼として</h3>
+				<p class="Base-text">安心して撃たれ、安心して転べる軽量・安価なデジタル双眼NVとして。モジュール構成のため被弾しても破損部位の交換のみで修理が可能。</p>
 			</div>
 		</div>
 		<div class="V-Card">
@@ -142,7 +143,7 @@
 	</div>
 	<!-- - - - - - - - - - - ここからConversion周り - - - - - - - - - -->
 	<div class="Content-wrapper">
-		<a class="Conversion" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/YUME_v1">
+		<a class="Conversion" href="#">
 			<div class="Text">
 				<p class="Catch-copy_min"><i class="fa-solid fa-cloud-arrow-down"></i>How to Download</p>
 				<p class="Base-text">作成用のデータはGithub内で公開しております。分解、組み立ての詳しいマニュアルもこちらのReadmeの内容を参照ください。</p>
@@ -160,7 +161,7 @@
 					<p class="Product-text">SIG/VFC P320用のオリジナルカービンコンバージョンキット</p>
 					<a class="btn-light" href="#">VIEW MORE</a>
 				</div>
-				<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0012@2x.png">
+				<img class="Product-image" src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/IMG_1043.PNG">
 			</div>
 		</div>
 	</div>
