--- a/P320-EXF_ARSENAL-Q62.html
+++ b/P320-EXF_ARSENAL-Q62.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>P320 EXF | ARSENAL-Q62</title>
-		<link rel="stylesheet" href="../ARSENAL-Q62/CSS/ARSENAL-Q62.css">
-		<link rel="stylesheet" href="../ARSENAL-Q62/CSS/ARSENAL-Q62_single.css">
+		<link rel="stylesheet" href="https://qoo622.github.io/Arsenal-Q62/CSS/ARSENAL-Q62.css">
+		<link rel="stylesheet" href="https://qoo622.github.io/Arsenal-Q62/CSS/ARSENAL-Q62_single.css">
 		<!-- Noto sans JPの読み込み -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
 		<script src="https://kit.fontawesome.com/32bd0e5d50.js" crossorigin="anonymous"></script>
 		<!-- JSの読み込み -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-		<script src="../ARSENAL-Q62/ARSENAL-Q62.js"></script>
+		<script src="https://qoo622.github.io/Arsenal-Q62/ARSENAL-Q62.js"></script>
 		<!-- Twitterのスクリプト -->
 		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		<!-- ogp -->
