--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>YUME | ARSENAL-Q62</title>
+		<link rel="icon" href="https://qoo622.github.io/Arsenal-Q62/img/logo/Arsenal-Q62_favicon.svg" type="image/svg+xml">
 		<link rel="stylesheet" href="https://qoo622.github.io/Arsenal-Q62/CSS/ARSENAL-Q62.css">
 		<link rel="stylesheet" href="https://qoo622.github.io/Arsenal-Q62/CSS/ARSENAL-Q62_single.css">
 		<!-- Noto sans JPの読み込み -->
