--- a/P320-EXF_ARSENAL-Q62.html
+++ b/P320-EXF_ARSENAL-Q62.html
@@ -144,7 +144,7 @@
 	</div>
 	<!-- - - - - - - - - - - ここからConversion周り - - - - - - - - - -->
 	<div class="Content-wrapper">
-		<a class="Conversion" href="#">
+		<a class="Conversion" href="https://github.com/Qoo622/3D-print/tree/master/P320/Carbine-Kit">
 			<div class="Text">
 				<p class="Catch-copy_min"><i class="fa-solid fa-cloud-arrow-down"></i>How to Download</p>
 				<p class="Base-text">作成用のデータはGithub内で公開しております。分解、組み立ての詳しいマニュアルもこちらのReadmeの内容を参照ください。</p>
