--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 				<div class="Date">2024.03.01.</div>
 				<div class="Base-text">ARSENAL Q62としての活動ページを公開しました。</div>
 			</div>
-			<a class="Update-content" href="#">
+			<a class="Update-content" href="https://qoo622.github.io/Arsenal-Q62/YUME_ARSENAL-Q62.html">
 				<div class="Date">2024.03.01.</div>
 				<div class="Base-text">夢ビジョン用カスタムモジュール『YUME』のページを公開しました。</div>
 			</a>
-			<a class="Update-content" href="">
+			<a class="Update-content" href="https://qoo622.github.io/Arsenal-Q62/P320-EXF_ARSENAL-Q62.html">
 				<div class="Date">2024.03.01.</div>
 				<div class="Base-text">SIG AIR/VFC P320向けカービンキット『P320 EXF』のページを公開しました。</div>
 			</a>
