--- a/P320-EXF_ARSENAL-Q62.html
+++ b/P320-EXF_ARSENAL-Q62.html
@@ -28,7 +28,7 @@
 		<head prefix=”og: http://ogp.me/ns#”>
 			<meta property="og:url" content="https://qoo622.github.io/Arsenal-Q62/P320-EXF_ARSENAL-Q62.html" />
 			<meta property="og:type" content="website" />
-			<meta property="og:title" content="YP320-EXF | ARSENAL Q62" />
+			<meta property="og:title" content="P320-EXF | ARSENAL Q62" />
 			<meta property="og:description" content="SIG/VFC P320用のカービンコンバージョンキット" />
 			<meta property="og:site_name" content="ARSENAL Q62" />
 			<meta property="og:image" content="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/OGP-image_P320-EXF.png" />
