--- a/P320-EXF_ARSENAL-Q62.html
+++ b/P320-EXF_ARSENAL-Q62.html
@@ -63,7 +63,7 @@
 			</div>
 			<div class="single_top-content_center"> <!-- 中央要素 -->
 				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/DSC_0135.png">
-				<a class="btn" href="https://github.com/Qoo622/3D-print/tree/master/P320/Carbine-Kit"><i class="fa-brands fa-square-github"></i>DOWNLOAD<i class="fa-solid fa-chevron-right"></i></a>
+				<a class="btn" href="https://github.com/Qoo622/3D-print/tree/master/P320/Carbine-Kit" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-github"></i>DOWNLOAD<i class="fa-solid fa-chevron-right"></i></a>
 			</div>
 		</div>
 	
@@ -122,10 +122,6 @@
 			</div>
 		</div>
 	</div>
-	<div class="Content-wrapper">
-		
-	</div>
-	
 	<!-- - - - - - - - - - - ここからUpdate周り - - - - - - - - - -->
 	<div class="Content-wrapper">
 		<h2 class="collection-title">UPDATE</h2>
@@ -144,7 +140,7 @@
 	</div>
 	<!-- - - - - - - - - - - ここからConversion周り - - - - - - - - - -->
 	<div class="Content-wrapper">
-		<a class="Conversion" href="https://github.com/Qoo622/3D-print/tree/master/P320/Carbine-Kit">
+		<a class="Conversion" href="https://github.com/Qoo622/3D-print/tree/master/P320/Carbine-Kit" target="_blank" rel="noopener noreferrer">
 			<div class="Text">
 				<p class="Catch-copy_min"><i class="fa-solid fa-cloud-arrow-down"></i>How to Download</p>
 				<p class="Base-text">作成用のデータはGithub内で公開しております。分解、組み立ての詳しいマニュアルもこちらのReadmeの内容を参照ください。</p>
