--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -63,7 +63,7 @@
 			</div>
 			<div class="single_top-content_center"> <!-- 中央要素 -->
 				<img src="https://qoo622.github.io/Arsenal-Q62/img/YUME/DSC_0012@2x.png">
-				<a class="btn" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/YUME_v1"><i class="fa-brands fa-square-github"></i>DOWNLOAD<i class="fa-solid fa-chevron-right"></i></a>
+				<a class="btn" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/YUME_v1" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-github"></i>DOWNLOAD<i class="fa-solid fa-chevron-right"></i></a>
 			</div>
 		</div>
 	
@@ -144,7 +144,7 @@
 	</div>
 	<!-- - - - - - - - - - - ここからConversion周り - - - - - - - - - -->
 	<div class="Content-wrapper">
-		<a class="Conversion" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/YUME_v1">
+		<a class="Conversion" href="https://github.com/Qoo622/3D-print/tree/master/Yume-Vision/YUME_v1" target="_blank" rel="noopener noreferrer">
 			<div class="Text">
 				<p class="Catch-copy_min"><i class="fa-solid fa-cloud-arrow-down"></i>How to Download</p>
 				<p class="Base-text">作成用のデータはGithub内で公開しております。分解、組み立ての詳しいマニュアルもこちらのReadmeの内容を参照ください。</p>
