--- a/P320-EXF_ARSENAL-Q62.html
+++ b/P320-EXF_ARSENAL-Q62.html
@@ -63,7 +63,7 @@
 			</div>
 			<div class="single_top-content_center"> <!-- 中央要素 -->
 				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/DSC_0135.png">
-				<a class="btn" href="https://github.com/Qoo622/3D-print/tree/master/P320/Carbine-Kit" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-github"></i>DOWNLOAD<i class="fa-solid fa-chevron-right"></i></a>
+				<a class="btn" href="https://github.com/Qoo622/3D-print/tree/master/P320/Carbine-Kit" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-github"></i>DOWNLOAD<i class="fa-solid fa-up-right-from-square"></i></a>
 			</div>
 		</div>
 	
@@ -145,7 +145,7 @@
 				<p class="Catch-copy_min"><i class="fa-solid fa-cloud-arrow-down"></i>How to Download</p>
 				<p class="Base-text">作成用のデータはGithub内で公開しております。分解、組み立ての詳しいマニュアルもこちらのReadmeの内容を参照ください。</p>
 			</div>
-			<div class="Button"><i class="fa-brands fa-square-github"></i>Github<i class="fa-solid fa-chevron-right"></i></div>
+			<div class="Button"><i class="fa-brands fa-square-github"></i>Github<i class="fa-solid fa-up-right-from-square"></i></div>
 		</a>
 	</div>
 	<!-- - - - - - - - - - - ここからProduct周り - - - - - - - - - -->
@@ -170,8 +170,8 @@
 	<!-- - - - - - - - - - - ここからFooter周り - - - - - - - - - - -->
 		<div class="footer">
 			<div class="footer-link">
-				<a href="https://x.com/qoo6221?s=21&t=OXhiHAZhT9JjPjXbD_4xHg"><i class="fa-brands fa-square-twitter"></i>Qoo622</a>
-				<a href="https://github.com/Qoo622/3D-print"><i class="fa-brands fa-square-github"></i>Github</a>
+				<a href="https://x.com/qoo6221?s=21&t=OXhiHAZhT9JjPjXbD_4xHg" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-twitter"></i>Qoo622</a>
+				<a href="https://github.com/Qoo622/3D-print" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-github"></i>Github</a>
 			</div>
 			<img class="footer-logo" src="https://qoo622.github.io/Arsenal-Q62/img/logo/Q62-Arsenal_logo_Arsenal-Q62_logo_header_wh.svg">
 			<p class="footer-text">© 2024. Qoo622</p>
