--- a/P320-EXF_ARSENAL-Q62.html
+++ b/P320-EXF_ARSENAL-Q62.html
@@ -62,7 +62,7 @@
 				</div>
 			</div>
 			<div class="single_top-content_center"> <!-- 中央要素 -->
-				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/DSC_1047.png">
+				<img src="https://qoo622.github.io/Arsenal-Q62/img/P320_EXF/DSC_1047.PNG">
 				<a class="btn" href="https://github.com/Qoo622/3D-print/tree/master/P320/Carbine-Kit" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-github"></i>DOWNLOAD<i class="fa-solid fa-up-right-from-square"></i></a>
 			</div>
 		</div>
