--- a/YUME_ARSENAL-Q62.html
+++ b/YUME_ARSENAL-Q62.html
@@ -130,17 +130,17 @@
 	<div class="Content-wrapper">
 		<h2 class="collection-title">UPDATE</h2>
 		<div class="Update-content_no-link">
-			<div class="Date">2024.03.01.</div>
-			<div class="Base-text">ARSENAL Q62としての活動ページを公開しました。</div>
+			<div class="Date">2024.01.28.</div>
+			<div class="Base-text">ヘルメットマウント用レンズを改良したRearパーツをv1.2に更新しました。</div>
 		</div>
-		<a class="Update-content" href="#">
-			<div class="Date">2024.03.01.</div>
-			<div class="Base-text">夢ビジョン用カスタムモジュール『YUME』のページを公開しました。</div>
-		</a>
-		<a class="Update-content" href="">
-			<div class="Date">2024.03.01.</div>
-			<div class="Base-text">SIG AIR/VFC P320向けカービンキット『P320 EXF』のページを公開しました。</div>
-		</a>
+		<div class="Update-content_no-link">
+			<div class="Date">2024.01.25.</div>
+			<div class="Base-text">家庭用機での印刷適性を高めたv1.1を公開しました。</div>
+		</div>
+		<div class="Update-content_no-link">
+			<div class="Date">2024.01.16.</div>
+			<div class="Base-text">YUME v1.0の.stl/.stepファイルをそれぞれ公開しました。</div>
+		</div>
 	</div>
 	<!-- - - - - - - - - - - ここからConversion周り - - - - - - - - - -->
 	<div class="Content-wrapper">
